[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "condenser"
version = "0.1.4"
description = "Config-driven database subsetting tool for Postgres and MySQL."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tonic AI" }]
keywords = ["database", "subset", "subsetting", "postgres", "mysql", "sampling", "ETL"]
classifiers = [

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Database"
]
dependencies = [
  "toposort",
  "psycopg2-binary",
#  "mysql-connector-python"
]

[project.scripts]
    condenser-direct-subset = "direct_subset:main"

[tool.setuptools]
py-modules = [
  "config_reader",
  "database_helper",
  "db_connect",
  "direct_subset",
#  "mysql_database_creator",
#  "mysql_database_helper",
  "psql_database_creator",
  "psql_database_helper",
  "result_tabulator",
  "subset",
  "subset_utils",
  "topo_orderer"
]


[tool.uv]
publish-url = "https://nexus.ra.brightpick.ai/repository/bp_swdev/"
check-url = "https://nexus.ra.brightpick.ai/repository/bp_swdev/simple"
trusted-publishing = "never"
